--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -19,7 +19,7 @@
        
       </div>
     </main>
-    <script type="module" src="/src/js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
 
    
   </body>
