--- a/src/2-form.html
+++ b/src/2-form.html
@@ -17,6 +17,6 @@
         </h1>
       </div>
     </main>
-    <script type="module" src="/src/js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
