--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,19 +8,34 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-   
 
-    <main>
+   <header class="header">
       <div class="container">
-        <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">
-         Gallery
-        </h1>
-       
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link back-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link back-link active" href="./1-gallery.html"
+                >Gallery</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link back-link" href="./2-form.html">Form</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container">
+        <ul class="gallery"></ul>
       </div>
     </main>
-    <script type="module" src="./js/1-gallery.js"></script>
-
+    <script type="module" src="./js/1-gallery.js" defer></script>
+  </body>
+</html>
    
   </body>
 </html>
