--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,16 +7,37 @@
     <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-
-    <main>
+<body>
+    <header class="header">
       <div class="container">
-        <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">
-          Form
-        </h1>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link back-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link back-link" href="./1-gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link back-link active" href="./2-form.html">Form</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </main>
-    <script type="module" src="./js/2-form.js"></script>
+    </header>
+    <div class="container">
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+    <script type="module" src="./js/2-form.js" defer></script>
   </body>
 </html>
